Add proper error message for Java 18+ module restrictions