@@ -3,6 +3,8 @@ package de.mb.heldensoftware.customentries;
 import de.mb.heldensoftware.customentries.EntryCreator.*;
 import helden.Helden;
 
+import javax.swing.*;
+
 /**
  * Created by Markus on 19.03.2017.
  */
@@ -19,9 +21,22 @@ public class HeldenLauncher {
 	}
 
 	public static void main(String[] args) {
-		// Register the plugin component
-		PluginSideloader.addPlugin(CustomEntryLoaderPlugin.class);
-		PluginSideloader.registerSideloader();
+		try {
+			// Register the plugin component
+			PluginSideloader.addPlugin(CustomEntryLoaderPlugin.class);
+			PluginSideloader.registerSideloader();
+		} catch (RuntimeException e) {
+			// Java 9+ module API prevents us from modifying the classloader.
+			if (e.getClass().getName().contains("InaccessibleObjectException")) {
+				JOptionPane.showMessageDialog(null,
+						"Die Java-Konfiguration verbietet Modifikationen am Class-Loader. \n\n" +
+						"Um Modifikationen zu erlauben, sind diese Start-Parameter notwendig (zwischen java und -jar):\n"+
+						"--add-opens java.base/java.lang=ALL-UNNAMED\n\n"+
+						"Alternativ können Sie eine ältere Java-Version einsetzen (bspw. Java 11).",
+						"Java Configuration Error", JOptionPane.ERROR_MESSAGE);
+			}
+			throw e;
+		}
 		// Patch bugs
 		ErrorHandler.patchHeldenErrorHandler();
 		ModsDatenParserBugPatcher.patchModsDatenParser();
